Implement MMCBR_IVAR_CAPS. It should better be implemented, or results can be unpredictable.

PR:		arm/128987


git-svn-id: svn+ssh://svn.freebsd.org/base/head@187476 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f